provision/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datnguyen-svc
spec:
  selector:
    app: datnguyen-student
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 9090
  type: NodePort
